@@ -1,3 +1,9 @@
+2008-05-18  Wakaba  <wakaba@suika.fam.cx>
+
+	* Info.pm (SEMICONFORMING_ENCODING_IMPL): New.  Distinguish full
+	non-conformance from semi-conformance, where we can something
+	to make the decoder conformant.
+
 2008-05-17  Wakaba  <wakaba@suika.fam.cx>
 
 	* Info.pm: Charset definitions now have |category| properties.
